--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
   
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+<h1>Lloyd's Pre-final Website Directory</h1>
+<h2>Please Select a Webpage</h2>
+<a href="payroll.html"> <h2>Payroll</h2> </a>
 </body>
 </html>
