--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Payroll Management</title>
+  <title>Home | Lloyd's Pre-final</title>
   <style>
     table {
       border-collapse: collapse;
