--- a/payroll.html
+++ b/payroll.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Payroll Management</title>
+  <title>Payroll Management | Lloyd's Prefinal</title>
   <style>
     table {
       border-collapse: collapse;
@@ -29,6 +29,8 @@
 <body>
 
   <h2>Payroll Management System</h2>
+
+<a href="index.html"><h2>Go Home</h2></a>
 
   <form id="payrollForm">
     <label for="employeeName">Employee Name:</label>
