--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <body>
   
 <h1>Lloyd's Pre-final Website Directory</h1>
-<h2>Please Select a Webpage</h2>
-<a href="payroll.html"> <h2>Payroll</h2> </a>
+<h2>Please Select a Webpage: </h2>
+<a href="income tax.html"> <h3>- Income Tax</h3> </a>
+<a href="payroll.html"> <h3>- Payroll</h3> </a>
 </body>
 </html>
