Update and rename Simple Computations in Javascript.html to computations.html

--- a/computations.html
+++ b/computations.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unit Converter</title>
+   <title>Computations | Lloyd's Pre-final</title>
+    <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+	
+	body {
+		font-family: verdana;
+	}
+  </style>
 </head>
 <body>
+
+<h2>Simple Computations in Javascript</h2>
+<p>Refresh Page to make another Computation.</p>
+
+<a href="index.html"><h2>Go Home</h2></a>
 
 <script>
     function convertUnits() {
