--- a/printnatural.html
+++ b/printnatural.html
@@ -28,7 +28,8 @@
 </head>
 <body>
 
-<h2>Natural Numbers</h2>
+<h2>Natural Numbers Loop</h2>
+<a href="index.html"><h2>Go Home</h2></a>
 
 <script>
     function printNaturalNumbers() {
