--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   
 <h1>Lloyd's Pre-final Website Directory</h1>
 <h2>Please Select a Webpage: </h2>
+<a href="computations.html"> <h3>- Simple Computations in Javascript</h3> </a>
+<a href="printnatural.html"> <h3>- Print N Natural Numbers using While Loop</h3> </a>
 <a href="income tax.html"> <h3>- Income Tax</h3> </a>
 <a href="payroll.html"> <h3>- Payroll</h3> </a>
 </body>
